horizontal scroll and quick fixes

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,13 @@ html {
     scroll-behavior: smooth;
 }
 
+#google_translate_element {
+    white-space: normal !important;
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+}
+
+
 .top {
     display: flex;
     align-items: center;
